--- a/sr_sample_python_library/package.xml
+++ b/sr_sample_python_library/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>sr_sample_cpp_library</name>
+  <name>sr_sample_python_library</name>
   <version>0.0.1</version>
-  <description>The sr_sample_cpp_library package</description>
+  <description>The sr_sample_python_library package</description>
   <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>
 
   <license>GPL</license>
@@ -13,7 +13,7 @@
   <author>Andriy Petlovanyy</author>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roscpp</build_depend>
-  <run_depend>roscpp</run_depend>
+  <build_depend>rospy</build_depend>
+  <run_depend>rospy</run_depend>
 
 </package>
