--- a/sr_sample_python_node/CMakeLists.txt
+++ b/sr_sample_python_node/CMakeLists.txt
@@ -1,16 +1,19 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(sr_sample_python_library)
+project(sr_sample_python_node)
 
 find_package(catkin REQUIRED)
 
+find_package(sr_sample_python_library REQUIRED)
+
 catkin_python_setup()
+
 
 ###################################
 ## catkin specific configuration ##
 ###################################
 
 catkin_package(
-  CATKIN_DEPENDS rospy
+  CATKIN_DEPENDS sr_sample_python_library
 )
 
 #############
@@ -18,7 +21,7 @@ catkin_package(
 #############
 
 install(PROGRAMS
-  src/${PROJECT_NAME}/sample_python_class.py
+  src/${PROJECT_NAME}/sample_python_node.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
@@ -26,4 +29,9 @@ install(PROGRAMS
 ## Testing ##
 #############
 
-catkin_add_nosetests(test)
+if (CATKIN_ENABLE_TESTING)
+
+  find_package(rostest REQUIRED)
+  add_rostest(test/test_sample_python_node.test)
+
+endif()
