--- a/shippable.yml
+++ b/shippable.yml
@@ -8,7 +8,7 @@ install:
   - sudo apt-get install curl -y
 
 script:
-  - export toolset_branch="master"
+  - export toolset_branch="F#145_check_deb_packages"
   - export server_type="shippable"
   - export used_modules="check_cache,install,create_workspace,code_style_check,unit_tests,check_deb,code_coverage"
   - export remote_shell_script="https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh"
