--- a/shippable.yml
+++ b/shippable.yml
@@ -10,6 +10,7 @@ install:
 script:
   - export toolset_branch="F#145_check_deb_packages"
   - export server_type="shippable"
-  - export used_modules="check_cache,install,create_workspace,code_style_check,unit_tests,check_deb,code_coverage"
+#  - export used_modules="check_cache,install,create_workspace,code_style_check,unit_tests,check_deb,code_coverage"
+  - export used_modules="check_cache,install,create_workspace,code_style_check,unit_tests,code_coverage"
   - export remote_shell_script="https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh"
   - curl -s "$( echo "$remote_shell_script" | sed 's/#/%23/g' )" | bash /dev/stdin "$toolset_branch" $server_type $used_modules
