--- a/shippable.yml
+++ b/shippable.yml
@@ -4,6 +4,9 @@ python:
   - 2.7
 
 install:
+  - echo test
+  - bash -c "echo test222"
+  - bash -c "ls"
   - locale-gen en_US.UTF-8
   - sudo apt-get update
   - sudo apt-get install curl -y
