--- a/circle.yml
+++ b/circle.yml
@@ -9,9 +9,11 @@ dependencies:
 
 test:
   override:
-    - export CIRCLE_REPO_DIR=`pwd`
-    - export toolset_branch="F_circle_ci_support"
-    - export server_type="circle"
-    - export used_modules="check_cache,install,create_workspace,code_style_check,unit_tests,check_deb,code_coverage"
-    - export remote_shell_script="https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh"
     - curl -s "$( echo "$remote_shell_script" | sed 's/#/%23/g' )" | bash /dev/stdin "$toolset_branch" $server_type $used_modules
+        environment:
+          CIRCLE_REPO_DIR: `pwd`
+          toolset_branch: F_circle_ci_support
+          server_type: circle
+          used_modules: check_cache,install,create_workspace,code_style_check,unit_tests,check_deb,code_coverage
+          remote_shell_script: https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh
+
