--- a/circle.yml
+++ b/circle.yml
@@ -15,5 +15,5 @@ test:
           toolset_branch: F_circle_ci_support
           server_type: circle
           used_modules: check_cache,install,create_workspace,code_style_check,unit_tests,check_deb,code_coverage
-          remote_shell_script: https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh
+          remote_shell_script: 'https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh'
 
