--- a/circle.yml
+++ b/circle.yml
@@ -15,6 +15,6 @@ dependencies:
 
 test:
   override:
-    - echo "Circle Dir repo: $CIRCLE_REPO_DIR"
+    - echo $CIRCLE_REPO_DIR
     - curl -s "$( echo "$remote_shell_script" | sed 's/#/%23/g' )" | bash /dev/stdin "$toolset_branch" $server_type $used_modules
 
