--- a/circle.yml
+++ b/circle.yml
@@ -8,13 +8,9 @@ machine:
     used_modules: check_cache,install,create_workspace,code_style_check,unit_tests,check_deb,code_coverage
     remote_shell_script: 'https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh'
 
-dependencies:
-  override:
-    - sudo apt-get update
-    - sudo apt-get install curl -y
-
 test:
   override:
     - echo $CIRCLE_REPO_DIR
+    - pwd
     - curl -s "$( echo "$remote_shell_script" | sed 's/#/%23/g' )" | bash /dev/stdin "$toolset_branch" $server_type $used_modules
 
