--- a/circle.yml
+++ b/circle.yml
@@ -12,5 +12,6 @@ test:
   override:
     - echo $CIRCLE_REPO_DIR
     - pwd
+    - env
     - curl -s "$( echo "$remote_shell_script" | sed 's/#/%23/g' )" | bash /dev/stdin "$toolset_branch" $server_type $used_modules
 
