--- a/circle.yml
+++ b/circle.yml
@@ -10,5 +10,6 @@ machine:
 
 test:
   override:
+    - env
     - curl -s "$( echo "$remote_shell_script" | sed 's/#/%23/g' )" | bash /dev/stdin "$toolset_branch" $server_type $used_modules
 
