--- a/circle.yml
+++ b/circle.yml
@@ -2,7 +2,7 @@ machine:
   services:
     - docker
   environment:
-    toolset_branch: F_circle_ci_support
+    toolset_branch: master
     server_type: circle
     used_modules: check_cache,install,create_workspace,code_style_check,unit_tests,check_deb,code_coverage
     remote_shell_script: 'https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh'
