--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,7 @@ machine:
   environment:
     toolset_branch: master
     server_type: circle
-    used_modules: check_cache,install,create_workspace,code_style_check,unit_tests,check_deb,code_coverage
+    used_modules: check_cache,install,create_workspace,code_style_check,unit_tests,check_deb,codecov_tool
     remote_shell_script: 'https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh'
 
 test:
