--- a/circle.yml
+++ b/circle.yml
@@ -2,9 +2,9 @@ machine:
   services:
     - docker
   environment:
-    toolset_branch: F_local_build
+    toolset_branch: master
     server_type: circle
-    used_modules: check_cache,install,create_workspace,code_style_check,unit_tests,codecov_tool
+    used_modules: check_cache,install,create_workspace,check_build,code_style_check,check_deb,codecov_tool
     remote_shell_script: 'https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh'
 
 test:
