--- a/circle.yml
+++ b/circle.yml
@@ -2,7 +2,7 @@ machine:
   services:
     - docker
   environment:
-    toolset_branch: master
+    toolset_branch: F_refactor_names
     server_type: circle
     used_modules: check_cache,install,create_workspace,check_build,code_style_check,check_deb,codecov_tool
     remote_shell_script: 'https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh'
