--- a/sr_sample_cpp_node/CMakeLists.txt
+++ b/sr_sample_cpp_node/CMakeLists.txt
@@ -5,14 +5,14 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
 )
 
-#find_package(sr_sample_cpp_library REQUIRED)
+find_package(sr_sample_cpp_library REQUIRED)
 
 ###################################
 ## catkin specific configuration ##
 ###################################
 
 catkin_package(
-#  CATKIN_DEPENDS sr_sample_cpp_library
+  CATKIN_DEPENDS sr_sample_cpp_library
 )
 
 ###########
@@ -24,7 +24,7 @@ include_directories(${sr_sample_cpp_library_INCLUDE_DIRS})
 add_executable(sample_cpp_node src/sample_cpp_node.cpp)
 
 target_link_libraries(sample_cpp_node
-#  ${sr_sample_cpp_library_LIBRARIES}
+  ${sr_sample_cpp_library_LIBRARIES}
   ${catkin_LIBRARIES}
 )
 
@@ -43,5 +43,5 @@ install(TARGETS sample_cpp_node
 if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
   add_rostest_gtest(test_sample_cpp_node test/test_sample_cpp_node.test test/test_sample_cpp_node.cpp)
-  target_link_libraries(test_sample_cpp_node ${catkin_LIBRARIES})
+  target_link_libraries(test_sample_cpp_node ${catkin_LIBRARIES} ${sr_sample_cpp_library_LIBRARIES})
 endif()
