--- a/sr_sample_python_node/package.xml
+++ b/sr_sample_python_node/package.xml
@@ -13,7 +13,9 @@
   <author>Andriy Petlovanyy</author>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>sr_sample_python_library</build_depend>
   <build_depend>rospy</build_depend>
+  <run_depend>sr_sample_python_library</run_depend>
   <run_depend>rospy</run_depend>
 
 </package>
