--- a/circle.yml
+++ b/circle.yml
@@ -11,3 +11,4 @@ test:
   override:
     - curl -s "$( echo "$remote_shell_script" | sed 's/#/%23/g' )" | bash /dev/stdin "$toolset_branch" $server_type $used_modules
 
+# Debug change
