--- a/circle.yml
+++ b/circle.yml
@@ -10,3 +10,5 @@ machine:
 test:
   override:
     - curl -s "$( echo "$remote_shell_script" | sed 's/#/%23/g' )" | bash /dev/stdin "$toolset_branch" $server_type $used_modules
+
+# debug !!!
