--- a/circle.yml
+++ b/circle.yml
@@ -12,3 +12,4 @@ test:
     - curl -s "$( echo "$remote_shell_script" | sed 's/#/%23/g' )" | bash /dev/stdin "$toolset_branch" $server_type $used_modules
 
 # debug !!!
+# debug !!!
