--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,17 @@ services:
   - docker
 
 env:
-  - toolset_branch: F_travis_ci_support
-  - server_type: travis
-  - used_modules: check_cache,code_coverage
-  - remote_shell_script: 'https://raw.githubusercontent.com/shadow-robot/sr-build-tools/F_travis_ci_support/bin/sr-run-ci-build.sh'
-#  - remote_shell_script: 'https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh'
+  global:
+    - toolset_branch: F_travis_ci_support
+    - server_type: travis
+    - used_modules: check_cache,code_coverage
+    - remote_shell_script: 'https://raw.githubusercontent.com/shadow-robot/sr-build-tools/F_travis_ci_support/bin/sr-run-ci-build.sh'
+  #  - remote_shell_script: 'https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh'
 
 script:
-- curl -s https://raw.githubusercontent.com/shadow-robot/sr-build-tools/F_travis_ci_support/bin/sr-run-ci-build.sh | bash -x /dev/stdin F_travis_ci_support travis check_cache,code_coverage
+  - echo $toolset_branch
+#  - curl -s https://raw.githubusercontent.com/shadow-robot/sr-build-tools/F_travis_ci_support/bin/sr-run-ci-build.sh | bash -x /dev/stdin F_travis_ci_support travis check_cache,code_coverage
 #- curl -s "$( echo "$remote_shell_script" | sed 's/#/%23/g' )" | bash -x /dev/stdin "$toolset_branch" $server_type $used_modules
+
+#after_failure:
+#  - curl -X POST --data-urlencode "payload={\"channel\":\"#bots\", \"username\":\"travis\", \"text\":\"[$SHIPPABLE_REPO_SLUG branch $BRANCH] <$BUILD_URL|Build $SHIPPABLE_BUILD_NUMBER> failed\", \"icon_emoji\":\":monkey_face:\"}" $SLACK_WEB_HOOK_URL
