--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ env:
     - toolset_branch: F_travis_ci_support
     - server_type: travis
     - used_modules: check_cache,code_coverage
-    - remote_shell_script: 'https://raw.githubusercontent.com/shadow-robot/sr-build-tools/F_travis_ci_support/bin/sr-run-ci-build.sh'
-  #  - remote_shell_script: 'https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh'
+    - remote_shell_script: 'https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh'
 
 script:
   - echo $toolset_branch
+  - echo $remote_shell_script
 #  - curl -s https://raw.githubusercontent.com/shadow-robot/sr-build-tools/F_travis_ci_support/bin/sr-run-ci-build.sh | bash -x /dev/stdin F_travis_ci_support travis check_cache,code_coverage
 #- curl -s "$( echo "$remote_shell_script" | sed 's/#/%23/g' )" | bash -x /dev/stdin "$toolset_branch" $server_type $used_modules
 
