--- a/shippable.yml
+++ b/shippable.yml
@@ -13,6 +13,7 @@ build:
     pull: true
     options: "-e HOME=/root"
   ci:
+    - env
     - sudo apt-get update
     - sudo apt-get install curl -y
     - export toolset_branch="master"
