--- a/shippable.yml
+++ b/shippable.yml
@@ -8,14 +8,13 @@ env:
 
 build:
   pre_ci_boot:
-    image_name: shadowrobot/ubuntu-ros-indigo-build-tools
-    image_tag: latest
+    image_name: shadowrobot/build-tools
+    image_tag: trusty-indigo
     pull: true
-    options: "-e HOME=/root"
   ci:
     - sudo apt-get update
     - sudo apt-get install curl -y
-    - export toolset_branch="master"
+    - export toolset_branch="F_some_docker_refactoring"
     - export server_type="shippable"
     - export used_modules="check_cache,check_build,code_style_check,check_deb_make,code_coverage"
     - export remote_shell_script="https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh"
