--- a/shippable.yml
+++ b/shippable.yml
@@ -14,7 +14,7 @@ build:
   ci:
     - sudo apt-get update
     - sudo apt-get install curl -y
-    - export toolset_branch="F_some_docker_refactoring"
+    - export toolset_branch="master"
     - export server_type="shippable"
     - export used_modules="check_cache,check_build,code_style_check,check_deb_make,code_coverage"
     - export remote_shell_script="https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh"
