--- a/shippable.yml
+++ b/shippable.yml
@@ -9,13 +9,14 @@ env:
 build:
   pre_ci_boot:
     image_name: shadowrobot/build-tools
-    image_tag: trusty-indigo
+    image_tag: xenial-kinetic
     pull: true
   ci:
     - sudo apt-get update
     - sudo apt-get install curl -y
     - export toolset_branch="master"
     - export server_type="shippable"
+    - export ros_release_name="kinetic"
     - export used_modules="check_cache,check_build,code_style_check,check_deb_make,code_coverage"
     - export remote_shell_script="https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh"
     - curl -s "$( echo "$remote_shell_script" | sed 's/#/%23/g' )" | bash /dev/stdin "$toolset_branch" $server_type $used_modules
