--- a/circle.yml
+++ b/circle.yml
@@ -2,10 +2,10 @@ machine:
   services:
     - docker
   environment:
-    toolset_branch: master
+    toolset_branch: B_fix_debian_build_issues
     server_type: circle
     ros_release_name: kinetic
-    docker_image_name: "shadowrobot/build-tools:xenial-kinetic"
+    ubuntu_version_name: xenial
     used_modules: check_cache,check_build,code_style_check,check_deb_make,codecov_tool
     remote_shell_script: 'https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh'
 
