Switched to main build tools branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 
 env:
   global:
-    - toolset_branch: B_fix_debian_build_issues
+    - toolset_branch: master
     - server_type: travis
     - ros_release_name: kinetic
     - ubuntu_version_name: xenial
