--- a/jenkins.yml
+++ b/jenkins.yml
@@ -1,7 +1,7 @@
 defaults:
   settings:
     ros_release: indigo
-    docker_image_name: shadowrobot/ubuntu-ros-indigo-build-tools
+    docker_image_name: shadowrobot/build-tools
     docker_image_tag: trusty-indigo
     template_job_name: template_unit_tests_and_code_coverage
     modules_list: check_cache,code_coverage
@@ -11,7 +11,6 @@ trunks:
   - name: kinetic-devel
     settings:
       ros_release: kinetic
-      docker_image_name: shadowrobot/ubuntu-ros-kinetic-build-tools
       docker_image_tag: xenial-kinetic
 
 branch:
