--- a/jenkins.yml
+++ b/jenkins.yml
@@ -1,19 +1,27 @@
-defaults:
-  settings:
-    ubuntu_version: trusty
-    ros_release: indigo
-    docker_image_name: shadowrobot/build-tools
-    docker_image_tag: trusty-indigo
+settings:
+  ubuntu:
+    version: trusty
+  ros:
+    release: indigo
+  docker:
+    image: shadowrobot/build-tools
+    tag: trusty-indigo
+  toolset:
     template_job_name: template_unit_tests_and_code_coverage
-    modules_list: check_cache,code_coverage
+    modules:
+      - check_cache
+      - code_coverage
 
 trunks:
   - name: indigo-devel
   - name: kinetic-devel
     settings:
-      ubuntu_version: xenial
-      ros_release: kinetic
-      docker_image_tag: xenial-kinetic
+      ubuntu:
+        version: xenial
+      ros:
+        release: kinetic
+      docker:
+        tag: xenial-kinetic
 
 branch:
   parent: kinetic-devel
