Fixed permissions issue

--- a/shippable.yml
+++ b/shippable.yml
@@ -20,6 +20,7 @@ build:
     - apt-get install -y --no-install-recommends ca-certificates wget
     - wget -O /tmp/oneliner "$( echo "$remote_shell_script" | sed 's/#/%23/g' )"
     - chown -R $MY_USERNAME:$MY_USERNAME $SHIPPABLE_BUILD_DIR
+    - chmod 755 /tmp/oneliner
     - cd /tmp
     - gosu $MY_USERNAME /tmp/oneliner "$toolset_branch" $server_type $used_modules
   on_failure:
