--- a/jenkins.yml
+++ b/jenkins.yml
@@ -16,6 +16,12 @@ trunks:
   - name: indigo-devel
     settings:
       - toolset:
+          template_job_name: template_benchmarking
+          modules:
+            - check_cache
+            - benchmarking
+            - code_coverage
+      - toolset:
           template_job_name: template_unit_tests_and_code_coverage
           modules:
             - check_cache
