--- a/jenkins.yml
+++ b/jenkins.yml
@@ -21,16 +21,16 @@ trunks:
             - check_cache
             - benchmarking
             - code_coverage
-      - toolset:
-          template_job_name: template_unit_tests_and_code_coverage
-          modules:
-            - check_cache
-            - code_coverage
-      - toolset:
-          template_job_name: template_benchmarking
-          modules:
-            - check_cache
-            - benchmarking
+#      - toolset:
+#          template_job_name: template_unit_tests_and_code_coverage
+#          modules:
+#            - check_cache
+#            - code_coverage
+#      - toolset:
+#          template_job_name: template_benchmarking
+#          modules:
+#            - check_cache
+#            - benchmarking
 
   - name: kinetic-devel
     settings:
