--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,5 +11,6 @@ jobs:
 #          used_modules: check_cache,check_build,code_style_check,check_deb_make,codecov_tool
           used_modules: check_cache,code_style_check
           remote_shell_script: 'https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh'
+    steps:
       - checkout
       - run: curl -s "$( echo "$remote_shell_script" | sed 's/#/%23/g' )" | bash /dev/stdin "$toolset_branch" $server_type $used_modules
