--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,4 +13,10 @@ jobs:
           remote_shell_script: 'https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh'
     steps:
       - checkout
-      - run: curl -s "$( echo "$remote_shell_script" | sed 's/#/%23/g' )" | bash /dev/stdin "$toolset_branch" $server_type $used_modules
+      - run: apt-get update
+      - run: apt-get install -y --no-install-recommends ca-certificates wget
+      - run: wget -O /tmp/oneliner "$( echo "$remote_shell_script" | sed 's/#/%23/g' )"
+      - run: chown -R $MY_USERNAME:$MY_USERNAME $SHIPPABLE_BUILD_DIR
+      - run: chmod 755 /tmp/oneliner
+      - run: cd /tmp
+      - run: gosu $MY_USERNAME /tmp/oneliner "$toolset_branch" $server_type $used_modules
