--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,11 +10,10 @@ jobs:
           ubuntu_version_name: xenial
 #          used_modules: check_cache,check_build,code_style_check,check_deb_make,codecov_tool
           used_modules: check_cache,code_style_check
-          remote_shell_script: 'https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh'
+
     steps:
       - checkout
-      - run: apt-get update
-      - run: apt-get install -y --no-install-recommends ca-certificates wget
+      - run: export remote_shell_script='https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh'
       - run: wget -O /tmp/oneliner "$( echo "$remote_shell_script" | sed 's/#/%23/g' )"
       - run: chown -R $MY_USERNAME:$MY_USERNAME $SHIPPABLE_BUILD_DIR
       - run: chmod 755 /tmp/oneliner
