--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,8 @@ jobs:
       - run: whoami
       - run: ls -al ~/
       - run: ls -al $HOME
+      - run: pwd
+      - run: ls al ~/project
       - run: ls -al $CIRCLE_WORKING_DIRECTORY
       - run: echo 'export remote_shell_script="https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh"' >> $BASH_ENV
       - run: wget -O /tmp/oneliner "$( echo "$remote_shell_script" | sed 's/#/%23/g' )"
