--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    working_directory: /tmp
+    working_directory: /tmp/repository
     docker:
       - image: shadowrobot/build-tools:xenial-kinetic
         environment:
@@ -14,7 +14,8 @@ jobs:
 
     steps:
       - checkout
-      - run: echo 'eval CIRCLE_WORKING_DIRECTORY=$CIRCLE_WORKING_DIRECTORY' >> $BASH_ENV
+#      - run: echo 'eval CIRCLE_WORKING_DIRECTORY=$CIRCLE_WORKING_DIRECTORY' >> $BASH_ENV
+      - run: echo $CIRCLE_WORKING_DIRECTORY
       - run: echo 'export remote_shell_script="https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh"' >> $BASH_ENV
       - run: wget -O /tmp/oneliner "$( echo "$remote_shell_script" | sed 's/#/%23/g' )"
       - run: chown -R $MY_USERNAME:$MY_USERNAME $CIRCLE_WORKING_DIRECTORY
