--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,15 @@ jobs:
 
     steps:
       - checkout
-#      - run: echo 'eval CIRCLE_WORKING_DIRECTORY=$CIRCLE_WORKING_DIRECTORY' >> $BASH_ENV
-      - run: echo $CIRCLE_WORKING_DIRECTORY
       - run: echo 'export remote_shell_script="https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh"' >> $BASH_ENV
       - run: wget -O /tmp/oneliner "$( echo "$remote_shell_script" | sed 's/#/%23/g' )"
       - run: chown -R $MY_USERNAME:$MY_USERNAME $CIRCLE_WORKING_DIRECTORY
       - run: chmod 755 /tmp/oneliner
       - run: gosu $MY_USERNAME /tmp/oneliner "$toolset_branch" $server_type $used_modules
+
+      - store_test_results:
+          path: /home/user/test_results
+
+      - store_artifacts:
+          path: /home/user/code_coverage_results
+          destination: code_coverage
