Added variables for artifacts folders

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,13 @@ jobs:
       - image: shadowrobot/build-tools:xenial-kinetic
         environment:
           toolset_branch: F#SRC-1420_circle_ci_2_0 # DEBUG: Change to master
-          server_type: circle2 # DEBUG: change to circle
+          server_type: circle
           ros_release_name: kinetic
           ubuntu_version_name: xenial
 #          used_modules: check_cache,check_build,code_style_check,check_deb_make,codecov_tool
           used_modules: check_cache,code_style_check
+          CIRCLE_CI_TESTS_DIR: /home/user/test_results
+          CIRCLE_CI_CODE_COVERAGE: /home/user/code_coverage_results
 
     steps:
       - checkout
@@ -21,8 +23,8 @@ jobs:
       - run: gosu $MY_USERNAME /tmp/oneliner "$toolset_branch" $server_type $used_modules
 
       - store_test_results:
-          path: /home/user/test_results
+          path: $CIRCLE_CI_TESTS_DIR
 
       - store_artifacts:
-          path: /home/user/code_coverage_results
+          path: $CIRCLE_CI_CODE_COVERAGE_DIR
           destination: code_coverage
