--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,9 +22,10 @@ phases:
       - env
       - ls -la "$relative_job_path"
       - cp -r $CODEBUILD_SRC_DIR/* /home/user/workspace/src/
-      - curl -s "$( echo "$remote_shell_script" | sed 's/#/%23/g' )" | bash /dev/stdin "$toolset_branch" $server_type $used_modules $relative_job_path 
+      - echo Running $remote_shell_script with stdin values $toolset_branch $server_type $used_modules $relative_job_path
+      - curl -s "$( echo "$remote_shell_script" | sed 's/#/%23/g' )" | bash /dev/stdin $toolset_branch $server_type $used_modules $relative_job_path 
 artifacts:
   files:
     - 'codecoverage/*'
     - 'testresults/*'
-  base-directory: '/root/workspace'
+  base-directory: '/home/user'
