--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,7 +25,7 @@ phases:
       - echo Testing curl
       - curl -Is http://www.google.com | head -n 1
       - echo Displaying Docker ID
-      - cat /proc/self/cgroup | grep "docker" | sed s/\\//\\n/g | tail -1
+      - echo $(cat /proc/self/cgroup | grep "docker" | sed s/\\//\\n/g | tail -1)
       - echo Running "$remote_shell_script" with stdin values $toolset_branch $server_type $used_modules $relative_job_path
       - curl -s "$( echo "$remote_shell_script" | sed 's/#/%23/g' )" | bash /dev/stdin $toolset_branch $server_type $used_modules $relative_job_path 
 artifacts:
