--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,32 +1,20 @@
-#for AWS CodeBuild
-
-#this version MUST be 0.2 as per AWS CodeBuild BuildSpec file rules
 version: 0.2
 
 env:
   variables:
-     #change the line below to master (BEFORE MERGING!) 
      toolset_branch: "F#SRC-2345_aws_build_of_build-servers-check"
      server_type: "local-docker"
      used_modules: "local,check_cache,code_coverage"
-     ros_release_name: "kinetic"
-     ubuntu_version_name: "xenial"
-     docker_image_name: "shadowrobot/build-tools:xenial-kinetic"
      relative_job_path: "/home/user"
      unit_tests_result_dir: "/home/user/unit_tests"
      coverage_tests_result_dir: "/home/user/code_coverage"
-     #change the line below to "https://raw.githubusercontent.com/shadow-robot/sr-build-tools/master/bin/sr-run-ci-build.sh" (BEFORE MERGING)
      remote_shell_script: "https://raw.githubusercontent.com/shadow-robot/sr-build-tools/F%23SRC-2345_aws_build_of_build-servers-check/bin/sr-run-ci-build.sh"
 phases:
   build:
     commands:
       - echo Build started on `date`
       - env
-      - ls -la "$relative_job_path"
       - chown -R $MY_USERNAME:$MY_USERNAME $CODEBUILD_SRC_DIR
-       #- cp -r $CODEBUILD_SRC_DIR/* /home/user/workspace/src/
-       #- rm -r $CODEBUILD_SRC_DIR/
-      - echo Running "$remote_shell_script" with stdin values $toolset_branch $server_type $used_modules $relative_job_path
       - wget -O /tmp/oneliner "$( echo "$remote_shell_script" | sed 's/#/%23/g' )"
       - chmod 755 /tmp/oneliner
       - cd /tmp
@@ -34,5 +22,5 @@ phases:
 artifacts:
   files:
     - 'code_coverage/*'
-    - 'test_results/*'
+    - 'unit_tests/*'
   base-directory: '/home/user'
