--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,7 +18,9 @@ phases:
       - wget -O /tmp/oneliner "$( echo "$remote_shell_script" | sed 's/#/%23/g' )"
       - chmod 755 /tmp/oneliner
       - cd /tmp
-      - gosu $MY_USERNAME /tmp/oneliner $toolset_branch $server_type $used_modules $relative_job_path      
+      - gosu $MY_USERNAME /tmp/oneliner $toolset_branch $server_type $used_modules $relative_job_path
+      - echo Build done
+      - ls -la 
 artifacts:
   files:
     - '$unit_tests_result_dir/*'
