--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,18 +18,7 @@ phases:
       - wget -O /tmp/oneliner "$( echo "$remote_shell_script" | sed 's/#/%23/g' )"
       - chmod 755 /tmp/oneliner
       - gosu $MY_USERNAME /tmp/oneliner $toolset_branch $server_type $used_modules $relative_job_path
-      - echo Build done
-      - cd $relative_job_path
-      - ls -lrtha 
-      - cd $unit_tests_result_dir
-      - ls -lrtha 
-      - cd $coverage_tests_result_dir
-      - ls -lrtha
-      - cd "/home/user/workspace"
-      - ls -lrtha
-      - cd "/home/user/benchmarking_results"
-      - ls -lrtha
 artifacts:
   files:
-    - '$unit_tests_result_dir/*'
-    - '$coverage_tests_result_dir/*'
+    - '$unit_tests_result_dir/**/*'
+    - '$coverage_tests_result_dir/**/*'
