--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,24 +1,24 @@
-#for AWS CodeBuild
-
-#this version MUST be 0.2 as per AWS CodeBuild BuildSpec file rules
 version: 0.2
 
 env:
   variables:
-     ubuntu_version: "bionic"
-     ros_release: "melodic"
-     travis_repo_dir: "/home/user/workspace/src/"
-     travis_is_pull_request: "false"
+     toolset_branch: "F#SRC-2345_aws_build_of_build-servers-check_bionic_melodic"
+     server_type: "local-docker"
+     used_modules: "local,check_cache,code_coverage"
+     relative_job_path: "/home/user"
+     unit_tests_result_dir: "/home/user/unit_tests"
+     coverage_tests_result_dir: "/home/user/code_coverage"
 phases:
   build:
     commands:
       - echo Build started on `date`
       - env
-      - ls -la /home/user
-      - cp -r $CODEBUILD_SRC_DIR/* /home/user/workspace/src/
-      - cd /home/user/sr-build-tools/ansible && git pull && git checkout master && sudo PYTHONUNBUFFERED=1 ansible-playbook -e travis_repo_dir=$travis_repo_dir -e travis_is_pull_request=false -e codecov_secure=codecov_secure -v -i "localhost," -c local docker_site.yml --tags "travis,check_cache,check_build,code_style_check,check_deb_make,codecov_tool"
+      - chown -R $MY_USERNAME:$MY_USERNAME $CODEBUILD_SRC_DIR
+      - export remote_shell_script="https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh"
+      - wget -O /tmp/oneliner "$( echo "$remote_shell_script" | sed 's/#/%23/g' )"
+      - chmod 755 /tmp/oneliner
+      - gosu $MY_USERNAME /tmp/oneliner $toolset_branch $server_type $used_modules $relative_job_path
 artifacts:
   files:
-    - 'codecoverage/*'
-    - 'testresults/*'
-  base-directory: '/root/workspace'
+    - '$unit_tests_result_dir/**/*'
+    - '$coverage_tests_result_dir/**/*'
