--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ env:
   variables:
      toolset_branch: "F#SRC-2345_aws_build_of_build-servers-check"
      server_type: "local-docker"
-     used_modules: "local,check_cache,code_coverage"
+     used_modules: "check_cache,code_coverage"
      relative_job_path: "/home/user"
      unit_tests_result_dir: "/home/user/unit_tests"
      coverage_tests_result_dir: "/home/user/code_coverage"
@@ -17,7 +17,7 @@ phases:
       - export remote_shell_script="https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh"
       - wget -O /tmp/oneliner "$( echo "$remote_shell_script" | sed 's/#/%23/g' )"
       - chmod 755 /tmp/oneliner
-      - gosu $MY_USERNAME /tmp/oneliner $toolset_branch $server_type $used_modules $relative_job_path
+      - gosu $MY_USERNAME /tmp/oneliner $toolset_branch $server_type $used_modules $CODEBUILD_SRC_DIR
 artifacts:
   files:
     - '$unit_tests_result_dir/**/*'
