--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   variables:
-     toolset_branch: "F#SRC-2345_aws_build_of_build-servers-check"
+     toolset_branch: "master"
      server_type: "local-docker"
      used_modules: "check_cache,code_coverage"
      relative_job_path: "/home/user"
