--- a/aws.yml
+++ b/aws.yml
@@ -7,7 +7,7 @@ settings:
   docker:
     image: shadowrobot/build-tools
     tag: trusty-indigo
-  template_project_name: template_project
+  template_project_name: template_unit_tests_and_code_coverage
   toolset:
     modules:
       - check_cache
