--- a/sr_sample_python_library/CMakeLists.txt
+++ b/sr_sample_python_library/CMakeLists.txt
@@ -25,5 +25,6 @@ install(PROGRAMS
 #############
 ## Testing ##
 #############
-
-catkin_add_nosetests(test)
+if (CATKIN_ENABLE_TESTING)
+  catkin_add_nosetests(test)
+endif()
