--- a/sr_sample_cpp_node/package.xml
+++ b/sr_sample_cpp_node/package.xml
@@ -15,6 +15,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>sr_sample_cpp_library</build_depend>
   <build_depend>roscpp</build_depend>
+  <test_depend>rostest</test_depend>
   <run_depend>sr_sample_cpp_library</run_depend>
   <run_depend>roscpp</run_depend>
 
